# crowd-sim

./: .gitignore  CMakeLists.txt  CMakePresets.json  todo.md
src/: game.cpp  ui.cpp
src/simulation/: agent.h  config.cpp  config.h  engine.cpp  engine.h
src/simulation/processors/: arrival.cpp  arrival.h  avoidance.cpp  avoidance.h  formation.cpp  formation.h  movement.cpp  movement.h  navigation.cpp  navigation.h  pathfinding.cpp  pathfinding.h  separation.cpp  separation.h  steering.cpp  steering.h  walls.cpp  walls.h
